--- a/client/src/components/featured/featured.scss
+++ b/client/src/components/featured/featured.scss
@@ -24,13 +24,16 @@
       .slider {
         &__item {
           img {
-            width: 185px;
+            min-width: 185px;
+            height: 185px;
             margin-bottom: 15px;
             border-radius: 3px;
+            background-color: lightgray;
           }
 
           h3 {
             font-size: 16px;
+            text-transform: capitalize;
           }
 
           span {
@@ -120,8 +123,10 @@
 
       &__item {
         height: 270px;
+        width: 100%;
         position: relative;
         overflow: hidden;
+        background-color: lightgray;
 
         img {
           border-radius: 3px;
