refacor: changes for new apis

--- a/client/src/components/featured/featured.scss
+++ b/client/src/components/featured/featured.scss
@@ -76,6 +76,7 @@
             color: gray;
             margin-top: 3px;
             margin-bottom: 8px;
+            text-transform: capitalize;
           }
 
           &.price {
